--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/react-dom": "18.2.4",
     "gray-matter": "^4.0.3",
+    "mongodb": "^6.3.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
